Adding LWS remover